Changes from 0.7.2 to 0.7.3
- improved window event handling

Changes from 0.7.1 to 0.7.2
- only recompute item sizes when fonts change
- hide to tray on close...
- set focus on input

Changes from 0.7.0 to 0.7.1
- fix for qt5 headers
- smaller scroll window by default
- smarter management of chat pane
- calculate correct text sizes

Changes from 0.6.2 to 0.7.0
- common core class for dialog based apps
- revamp multicast notify for shared chat
- subtle ui changes for about
- about notify is tab bound
- very minimal chat functionality, but works!!

Changes from 0.6.1 to 0.6.2
- more intensive and complete Qt5 support

Changes from 0.6.0 to 0.6.1
- introduction of dialogs utility applications
- fix filename sorting, but localeaware is broken in qt.

Changes from 0.5.1 to 0.6.0
- global common resources
- toolbar style set from theme

Changes from 0.5.1 to 0.5.2
- introduction of scalable icons

Changes from 0.5.0 to 0.5.1
- further icon theme refinement
- desktop menu fix

Changes from 0.4.2 to 0.5.0
- can build on Qt4 and 5
- fix icon install paths
- icon artwork fixes

Changes from 0.4.1 to 0.4.2
- notify no longer has internal testing, controlled by dbus build instead
- case sensitivity in text search
- basic notify fifo support

Changes from 0.4.0 to 0.4.1
- simplified headers
- manpager config tab
- theme icons now bound to design ui
- minimum qt version now 4.8.0

Changes from 0.3.4 to 0.4.0
- new CoastalView offers text viewer with search (^f, f3)
- beginning of real uses of coastal-notify - still incomplete
- self management of search directory list
- coastal search and coastal manpager now have searchable text
- idle() is now away() when screensaver...idle for keyidle to be added.

Changes from 0.3.3 to 0.3.4
- some cleanup of text processing for coastal-search

Changes from 0.3.2 to 0.3.3
- added rc version info for mingw32
- clarified dll build for win32 targets

Changes from 0.3.1 to 0.3.2
- support for screensaver detection