@@ -38,20 +38,19 @@ QSize ChatDisplay::sizeHint(const QStyleOptionViewItem& option, const QModelInde
     ChatItem *item = (ChatItem *)view->item(index.row());
     if(item->series != Main::getSeries()) {
         int l, t, r, b;
-        QString text = index.data(ITEM_TEXT).toString();
 
         view->getContentsMargins(&l, &t, &r, &b);
 
         QRect ta = option.rect.adjusted(50, 120, 0, 0);
-        ta = option.fontMetrics.boundingRect(ta, Qt::AlignLeft|Qt::TextWordWrap, text, 0);
+        ta = option.fontMetrics.boundingRect(ta, Qt::AlignLeft|Qt::TextWordWrap, item->text, 0);
 
-        QString id = index.data(ITEM_ID).toString();
+        QString id = index.data(Qt::DisplayRole).toString();
         if(option.fontMetrics.width(id) >= 46) {
             while(option.fontMetrics.width(id + "...") > 46)
                 id.chop(1);
             id += "...";
         }    
-        item->setData(ITEM_USER, id);
+        item->user = id;
         item->size = QSize(r - l + 1, ta.height() + 4);
         item->series = Main::getSeries();
     }
@@ -60,25 +59,25 @@ QSize ChatDisplay::sizeHint(const QStyleOptionViewItem& option, const QModelInde
 
 void ChatDisplay::paint(QPainter *painter, const QStyleOptionViewItem& option, const QModelIndex& index) const
 {
-    QString user = index.data(ITEM_USER).toString();
-    QString text = index.data(ITEM_TEXT).toString();
+    QListWidget *view = (QListWidget*)parent();
+    ChatItem *item = (ChatItem *)view->item(index.row());
 
     if(option.state & QStyle::State_Selected) {
         painter->fillRect(option.rect, option.palette.color(QPalette::Highlight));
     }
 
     QRect r = option.rect.adjusted(0, 0, 0, 0);
-    painter->drawText(r.left(), r.top(), 46, r.height(), Qt::AlignLeft|Qt::TextWordWrap, user, &r);
+    painter->drawText(r.left(), r.top(), 46, r.height(), Qt::AlignLeft|Qt::TextWordWrap, item->user, &r);
 
     r = option.rect.adjusted(50, 0, 0, 0);
-    painter->drawText(r.left(), r.top(), r.width(), r.height(), Qt::AlignLeft|Qt::TextWordWrap, text, &r);
+    painter->drawText(r.left(), r.top(), r.width(), r.height(), Qt::AlignLeft|Qt::TextWordWrap, item->text, &r);
 }
 
 ChatItem::ChatItem(const QString& id, const QString &msg) :
 QListWidgetItem(id)
 {
-    setData(ITEM_USER, id);
-    setData(ITEM_TEXT, msg);
+    user = id;
+    text = msg;
 }
 
 UserItem::UserItem(const QString& id) :
