@@ -1,5 +1,6 @@
 Changes from 0.7.2 to 0.7.3
-- improved window event handling
+- improved window event handling in notify
+- simpler and more consistent chat items
 
 Changes from 0.7.1 to 0.7.2
 - only recompute item sizes when fonts change
